overflow-x fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,8 @@
 body {
   overflow-x: hidden;
 }
+
+html {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
